--- a/app/src/main/res/layout/fragment_despensa.xml
+++ b/app/src/main/res/layout/fragment_despensa.xml
@@ -1,14 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="acm1pt.badassapp.DespensaFragment">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:padding="16dp"
+tools:context="acm1pt.badassapp.DespensaFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Pestaña de Despensa" />
+<TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    android:text="Despensaaaaa" />
 
 </FrameLayout>
