--- a/app/src/main/res/layout/fragment_estatus.xml
+++ b/app/src/main/res/layout/fragment_estatus.xml
@@ -1,11 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:orientation="vertical"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:padding="16dp"
-tools:context="acm1pt.badassapp.EstatusFragment">
+android:paddingTop="12dp">
 
-<TextView android:layout_width="match_parent" android:layout_height="match_parent"
-    android:text="Pestaña de Estatus" />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:id="@+id/label" />
 
-</FrameLayout>
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:id="@+id/connection_button"
+    android:text="Conectar"/>
+</LinearLayout>
