--- a/app/src/main/res/layout/activity_home_.xml
+++ b/app/src/main/res/layout/activity_home_.xml
@@ -5,15 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity_home_">
+    tools:context="acm1pt.badassapp.home">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/appbar" />
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/appbartabs"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
+
+        <include layout="@layout/toolbar"
+            android:id="@+id/appbar" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/appbartabs"
+            style="@style/MyCustomTabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
         android:layout_width="wrap_content"
