--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,8 +17,7 @@
         android:textColor="#ffffff"
         android:textAlignment="center"
         android:paddingTop="15dp"
-        android:background="#bf360c"
-        android:autoText="false" />
+        android:background="#bf360c" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,13 +36,6 @@
 
         </ScrollView>
 
-        <ProgressBar
-            android:id="@+id/progressBar1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:visibility="invisible"
-            />
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -100,6 +92,13 @@
                 android:textSize="16sp"
                 android:background="#c8689f38" />
 
+            <ProgressBar
+                android:id="@+id/progressBar1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:visibility="invisible"
+                />
         </LinearLayout>
 
     </RelativeLayout>
