--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -12,9 +12,10 @@
         android:layout_gravity="center"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:background="#616161"
+        android:background="#757575"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp">
+        android:paddingBottom="10dp"
+        android:weightSum="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -116,16 +117,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="15dp">
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:weightSum="1">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="@string/hab2"
             android:id="@+id/lblH2"
-            android:text="@string/hab2" />
+            android:textSize="20sp" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -206,6 +210,7 @@
                 android:id="@+id/lblE8"
                 android:layout_gravity="left|center_vertical" />
         </FrameLayout>
+
     </LinearLayout>
 
 </LinearLayout>
